--- a/Build-Server/Hathora-Unity_LinuxServer_Data/boot.config
+++ b/Build-Server/Hathora-Unity_LinuxServer_Data/boot.config
@@ -3,8 +3,9 @@ player-connection-guid=1301477201
 player-connection-debug=0
 player-connection-project-name=multiplayer-madness-temp
 player-connection-ip=192.168.0.10
+player-connection-ip=172.20.16.1
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
 hdr-display-enabled=0
-build-guid=c05e85f8fd2b4984ab7e9084f0694dca
+build-guid=0206bf609b454ffcbd9756af313c41ec
