--- a/Build-Server/Hathora-Unity_LinuxServer_Data/boot.config
+++ b/Build-Server/Hathora-Unity_LinuxServer_Data/boot.config
@@ -3,8 +3,9 @@ player-connection-guid=2686513795
 player-connection-debug=0
 player-connection-project-name=multiplayer-madness-temp
 player-connection-ip=192.168.0.10
+player-connection-ip=172.20.16.1
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
 hdr-display-enabled=0
-build-guid=be4acd5b3e7e4e12b1aa9d97b110f78f
+build-guid=07dbc61d295447e2be2dda94975e3f0a
